# EcoCodeDesktop

./: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.base.json
services/orchestrator/: Makefile  SPEC_ENDPOINTS_SUMMARY.md  pyproject.toml
services/orchestrator/deployment/: production.py
services/orchestrator/eco_api/: __init__.py  aws.py  config.py  logging.py  main.py  schemas.py
services/orchestrator/eco_api/security/: __init__.py  authorization_validator.py  crypto.py  html_sanitizer.py  path_validator.py  (+4 more)
services/orchestrator/scripts/: deploy.sh  health_check.py
services/orchestrator/tests/: test_api.py  test_api_integration.py  test_authorization_validator.py  test_aws_bedrock.py  test_benchmarks.py  test_error_handling_validation.py  test_error_recovery.py  test_file_manager.py  test_file_manager_security.py  test_generators.py  test_generators_comprehensive.py  test_generators_security.py  test_health.py  test_html_sanitizer.py  test_path_validator.py  test_performance.py  test_performance_regression.py  test_research_service.py  test_resilience_service.py  test_security_integration.py  test_security_monitoring.py  test_security_penetration.py  test_specs_router.py  test_stress.py  test_task_execution_engine.py  test_task_execution_engine_comprehensive.py  test_validation_framework.py  test_workflow_e2e.py  test_workflow_orchestrator.py  test_workflow_orchestrator_authorization.py  test_workflow_orchestrator_comprehensive.py  test_workflow_persistence_security.py  test_workspace_manager.py
services/orchestrator/tests_std/: test_logging.py
(+84 files in other folders)
