[project]
name = "eco-orchestrator"
version = "0.1.1"
description = "Local orchestrator service for EcoCode"
authors = [
  { name = "EcoCode Team", email = "engineering@ecocode.dev" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.2.1",
  "cryptography>=43.0.1",
  "python-multipart>=0.0.9",
  "watchfiles>=0.21.0",
  "boto3>=1.34.150",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.1",
  "httpx>=0.27.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.7",
  "httpx[cli]>=0.27.2",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "types-requests>=2.31.0.20240725"
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "tests"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["eco_api*"]
exclude = ["tests", "tests.*", "tests_std", "tests_std.*"]
